--- a/src/Style/Movies.css
+++ b/src/Style/Movies.css
@@ -57,6 +57,7 @@ small {
     background: linear-gradient(to top, rgb(0, 0, 0), transparent);
     z-index: 2;
     transition: 0.5s all;
+    border-radius: 15px;
     opacity: 0;
 }
 
