--- a/src/Style/Movies.css
+++ b/src/Style/Movies.css
@@ -10,6 +10,9 @@ small {
     color: white;
 }
 
+
+/* added the side black effect */
+
 .faded {
     position: relative;
     display: flex;
@@ -37,15 +40,24 @@ small {
     z-index: 9999;
 }
 
+
+/* make the div in to a horizontal line */
+
 .center {
     display: flex;
     overflow-y: hidden;
     overflow-x: scroll;
 }
 
+
+/* for hiding the scrollbar */
+
 .center::-webkit-scrollbar {
     display: none;
 }
+
+
+/* zoom1 for cards showing the black shadow and text  */
 
 .zoom1 {
     position: relative;
@@ -74,6 +86,9 @@ small {
 .zoom1:hover:before {
     opacity: 1;
 }
+
+
+/* for the text toggle on cards */
 
 .zoom1 .info {
     position: absolute;
@@ -108,6 +123,13 @@ small {
     z-index: 99;
 }
 
+
+/* button text */
+
+.none {
+    display: block;
+}
+
 @media (max-width: 560px) {
     .text {
         font-size: 20px;
@@ -118,6 +140,9 @@ small {
         height: 100%;
     }
     .hide {
+        display: none;
+    }
+    .none {
         display: none;
     }
 }
