--- a/src/Style/Movies.css
+++ b/src/Style/Movies.css
@@ -1,7 +1,7 @@
 .text {
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 2.2rem;
-    font-weight: 900;
+    font-family: 'Roboto Slab', serif;
+    font-size: 2.5rem;
+    font-weight: 500;
     padding-top: 100px;
     color: white;
 }
