--- a/src/Style/Movies.css
+++ b/src/Style/Movies.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
 .text {
     font-family: 'Roboto Slab', serif;
     font-size: 2.5rem;
@@ -27,7 +28,7 @@ small {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to right, #000, transparent);
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.426), transparent);
     z-index: 10;
 }
 
@@ -76,7 +77,7 @@ small {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to top, rgb(0, 0, 0), transparent);
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.392), transparent);
     z-index: 2;
     transition: 0.5s all;
     border-radius: 15px;
@@ -136,6 +137,11 @@ small {
     height: 400px;
 }
 
+.img {
+    margin: auto;
+    width: 90%;
+}
+
 @media (max-width: 560px) {
     .text {
         font-size: 20px;
@@ -151,10 +157,18 @@ small {
     .none {
         display: none;
     }
+    .img {
+        height: 300px;
+        width: 100% !important;
+    }
 }
 
 @media (max-width: 960px) {
     .faded img {
         height: 100%;
     }
+}
+
+.carousel-indicators [data-bs-target] {
+    z-index: 999;
 }
